cmake_minimum_required( VERSION 3.0 )
project( gfxinterop )
add_definitions( NO_IMGUI VULKAN )
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory( third_party )
include( third_party/bgfx.cmake/cmake/util/ConfigureDebugging.cmake )
file( GLOB $SRC_FILES RELATIVE ${CMAKE_SOURCE_DIR} src/*.cpp src/*.h )
add_executable( gfxinterop STATIC $SRC_FILES )
target_link_libraries( gfxinterop PUBLIC bx bgfx bimg glfw TFVulkan TFLinux TFImage )
#target_include_directories( gfxinterop PUBLIC include )
